--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Portfolio Home Page</title>
+  <title>vishxl.com</title>
   <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Monoton' rel='stylesheet' type='text/css'>
   
@@ -16,14 +16,14 @@
 
 <body>
 
-  <div class="visit"><a href="https://www.j-w-v.com/" target="_blank">Visit the live version here!</a></div>
+  <div class="visit"><a href="https://www.linkedin.com/in/vishxl" target="_blank">LinkedIn</a></div>
 <div id="particles-js">
   <div class="container">
     <div class="row top">
       <div class="twelve column">
         <div class="logo">V</div>
-        <h1>Joseph William Victory</h1>
-        <h2> Web Developer</h2>
+        <h1>Vishal Singh</h1>
+        <h2> Deep Learning Engineer</h2>
       </div>
     </div>
     
@@ -46,7 +46,7 @@
 
 <div class="container ">
   <div class="footer">
-  <p>Made using the awesome <a href="https://github.com/VincentGarreau/particles.js/">Particles.js</a>, <a href="http://cpv2api.com/">Codepen V2 API</a> & <a href="http://getskeleton.com/">Skeleton.css</a></p> </div></div>
+  <p><a href="https://github.com/VincentGarreau/particles.js/"></a>, <a href="http://cpv2api.com/"></a> & <a href="http://getskeleton.com/"></a></p> </div></div>
   </div>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js'></script>
