--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <div class="container ">
   <div class="footer">
-  <p><a href="https://github.com/VincentGarreau/particles.js/"></a>, <a href="http://cpv2api.com/"></a> & <a href="http://getskeleton.com/"></a></p> </div></div>
+  <p><a href="https://github.com/VincentGarreau/particles.js/"></a><a href="http://cpv2api.com/"></a> <a href="http://getskeleton.com/"></a></p> </div></div>
   </div>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js'></script>
