--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" >
-
+<style>
+    .whitetext {
+        color: white;
+    }    
+</style>
 <head>
   <meta charset="UTF-8">
-  <title>vishxl.com</title>
+  <title>vinit</title>
   <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Monoton' rel='stylesheet' type='text/css'>
   
@@ -16,14 +20,15 @@
 
 <body>
 
-  <div class="visit"><a href="https://www.linkedin.com/in/vishxl" target="_blank">LinkedIn</a></div>
+  <div class="visit"><a href="https://www.dropbox.com/s/8hwa282mhd10zgo/vinit_cv%20%283%29.pdf?dl=0" target="_blank">My Curriculum Vitae</a></div>
 <div id="particles-js">
   <div class="container">
     <div class="row top">
       <div class="twelve column">
         <div class="logo">V</div>
-        <h1>Vishal Singh</h1>
-        <h2> Deep Learning Engineer</h2>
+        <h1>Vinit Kumar Singh</h1>
+        <h2> Physics Major at IIT KGP | Programmer</h2><p></p>
+          <p class="whitetext"> A second-year undergraduate student of Department of Physics, Indian Institute of Technology, Kharagpur, enrolled in its 5-year Integrated MSc. course in Physics. Also a Computational Physics enthusiast and  I have been working on Transform Optics using Matlab try to models physics problems using programming. Besides being proficient in coding in MATLAB, Python(including numpy and scipy), C and C++.I am particularly interested in your works on Monte Carlo Methods and Cluster Algorithms. I do have knowledge of basic applications of Monte Carlo Algorithm. I have been taking an online course, Statistical Mechanics: Algorithms and Computations, on coursera.This year I am learning Quantum Physics and I have been modeling time-independent solution of Schrodinger's equations on Matlab using shooting and matching methods. I also have a good knowledge of numerical analysis up to solving differential equations numerically.</p>
       </div>
     </div>
     
