before adding text effect

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 </head>
 
 <body>
+	<div class="visit"><a href="https://www.dropbox.com/s/8hwa282mhd10zgo/vinit_cv%20%283%29.pdf?dl=0" target="_blank">My Curriculum Vitae</a></div>
     <div id="particles-js">
         <div class="container">
             <div class="row top">
