--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
 </head>
 
 <body>
-	<div class="visit"><a href="https://www.dropbox.com/s/8hwa282mhd10zgo/vinit_cv%20%283%29.pdf?dl=0" target="_blank">My Curriculum Vitae</a></div>
+
+	<div class="cvtext"><a class="button" href="https://www.dropbox.com/s/8hwa282mhd10zgo/vinit_cv%20%283%29.pdf?dl=0">My Curriculum Vitae</a></div>
+
+
+
+
+
     <div id="particles-js">
         <div class="container">
             <div class="row top">
@@ -100,6 +106,8 @@
     ga('create', 'UA-64631488-1', 'auto');
     ga('send', 'pageview');
     </script>
+
+
 </body>
 
 </html>
