--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                     <li><a href="https://twitter.com/skinnyandfamous">Twitter</a></li>
             </ul>
             <div class="footer">
-                
+                  <p>Designed by <a href="http://vinitsingh.me">vinitsingh.me</a></p>
             </div>
-            <!-- <button onclick="location.href='mailto:jwv.gib@gmail.com';" class="button-primary ">Contact Me</button> -->
+            <!-- <button onclick="location.href='mailto:vinitsingh911@gmail.com';" class="button-primary ">Contact Me</button> -->
         </div>
     </div>
     <!-- Javascript -->
